--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -361,6 +362,15 @@
             { image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTwZ22i_mVSxtZWbHsR5MvV6YJZqp_ASy0l5w&s', name: 'Sherlock Holmes', url: 'https://www.youtube.com/embed/fKDJQzk6tS8', genre: 'Ação' },
             { image: 'https://m.media-amazon.com/images/S/pv-target-images/655a3800f867508deda9e0f46ecf1aba01faead4dd851e137114667a9037de96.jpg', name: 'Sherlock Holmes 2: O...', url: 'https://www.youtube.com/embed/budrUrVerGE', genre: 'Ação' },
             { image: 'https://i.ibb.co/z8Rcpv1/Picture1.png', name: 'Moana: Um Mar...', url: 'https://www.youtube.com/embed/QB5GSKfPuUA', genre: 'Animação' },
+            { image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWKomvqwTHUWngkdfAf5ZOswE6ZT1eCKfJEQ&s', name: 'Mansão Mal Assombrada', url: 'https://www.youtube.com/embed/wgx9aX6npps', genre: 'Aventura' },
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/8fcd448e2a8f1c70b355655d7c58d2fc6089b64324f74636d8c72183b1806a21.jpg', name: 'Cadê os Morgans?', url: 'https://www.youtube.com/embed/jKTy-Aou3uI', genre: 'Comédia' },
+            { image: 'https://play-lh.googleusercontent.com/9429Zy-TmLZC7JwBN0avoyY-NLUcLo7t9-wvKZuAUfif7CmDuQGNlI5OTjPyCAucGGn1', name: 'Medo Profundo: O Se...', url: 'https://www.youtube.com/embed/WUTiUz9v0vk', genre: 'Ação' },
+            { image: 'https://play-lh.googleusercontent.com/w8zAyKwj24pLoxg2r2M6j5bznkH6pqhkHBvOBHs2GY8xqeIVgzxjx8QBSGAQVOUJskN8=w240-h480-rw', name: 'A Casa Amaldiçoada', url: 'https://www.youtube.com/embed/KziGatOL7aQ', genre: 'Terror' },
+            { image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgxEByUe9Pt-RCX-VyHnDtB-A3I4hEMioJLQ&s', name: 'Hotel Transilvânia', url: 'https://drive.google.com/file/d/1gbyzhLOOx8M74-r2m_-U7MTMkDVHhEaW/preview', genre: 'Animação' },
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/6056773ff6ab453bd3188157d7ddb9d0ddba07ffd099bbf68b8c911ddabdcb3f.jpg', name: 'Hotel Transilvânia 2', url: 'https://www.youtube.com/embed/lqFnSmHe-6s', genre: 'Animação' },
+            { image: 'https://play-lh.googleusercontent.com/lRa-kzKtsF3Z_HNZNIbMz9KOTmXCu1KhPcoRNGYSjvymvx0v71D6YClwdvCgwIh7Nd2_zg', name: 'Hotel Transilvânia 3: Fé...', url: 'https://www.youtube.com/embed/zgpuupiWV1g', genre: 'Animação' },
+            { image: 'https://play-lh.googleusercontent.com/m0BUTfrzJf6Q93RJkBhteQBTzGgi9QlBG65OXucswdRNzSrMzdvvTcn8pTPuw8DKyv9ZB6sFmSEIY6Jm5aO2', name: 'Hotel Transilvânia 4: Tra...', url: 'https://www.youtube.com/embed/Jbd-_oAMFVM', genre: 'Animação' },
+            { image: 'https://play-lh.googleusercontent.com/y4HBJKxSqEu6QPm0yVaiy-LvNoGX9CQD_9GL3Q1FoCBarBVrgdTR87sMJhEjCPt1RwM=w600-h300-pc0xffffff-pd', name: 'A Casa das Coelhinhas', url: 'https://www.youtube.com/embed/rT9v9MA-lgQ', genre: 'Comédia' },
 
         ];
 
