--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -371,6 +370,9 @@
             { image: 'https://play-lh.googleusercontent.com/lRa-kzKtsF3Z_HNZNIbMz9KOTmXCu1KhPcoRNGYSjvymvx0v71D6YClwdvCgwIh7Nd2_zg', name: 'Hotel Transilvânia 3: Fé...', url: 'https://www.youtube.com/embed/zgpuupiWV1g', genre: 'Animação' },
             { image: 'https://play-lh.googleusercontent.com/m0BUTfrzJf6Q93RJkBhteQBTzGgi9QlBG65OXucswdRNzSrMzdvvTcn8pTPuw8DKyv9ZB6sFmSEIY6Jm5aO2', name: 'Hotel Transilvânia 4: Tra...', url: 'https://www.youtube.com/embed/Jbd-_oAMFVM', genre: 'Animação' },
             { image: 'https://play-lh.googleusercontent.com/y4HBJKxSqEu6QPm0yVaiy-LvNoGX9CQD_9GL3Q1FoCBarBVrgdTR87sMJhEjCPt1RwM=w600-h300-pc0xffffff-pd', name: 'A Casa das Coelhinhas', url: 'https://www.youtube.com/embed/rT9v9MA-lgQ', genre: 'Comédia' },
+            { image: 'https://play-lh.googleusercontent.com/OjxT055m3do_GuqJkU_K--nuSdjW1G19DGoiqrQvXK74IqH8HOj3TfO-HbE8r8qfpG_UdovVYRGe-OsLlI3c', name: 'Legalmente Loira', url: 'https://drive.google.com/file/d/1BM34a98JbMRy-BkH3vMEoyhWJ7Nsvl2u/preview', genre: 'Comédia' },
+            { image: 'https://images.justwatch.com/poster/239896252/s718/legalmente-loira-2.jpg', name: 'Legalmente Loira 2', url: 'https://www.youtube.com/embed/0YyY-tC4QFQ', genre: 'Comédia' },
+            { image: 'https://images.justwatch.com/poster/242943249/s332/legally-blondes', name: 'Legalmente Loiras', url: 'https://drive.google.com/file/d/1_BRuRinmkcBXJbDasUur5plSNDJZ8pmf/preview', genre: 'Comédia' },
 
         ];
 
