--- a/index.html
+++ b/index.html
@@ -268,6 +268,12 @@
             { image: 'https://upload.wikimedia.org/wikipedia/pt/d/da/Leap_year_poster.jpg', name: 'Casa Comigo?', url: 'https://www.youtube.com/embed/XcokcEA_ats', genre: 'Romance' },
             { image: 'https://br.web.img3.acsta.net/c_310_420/medias/nmedia/18/87/13/77/19872396.jpg', name: 'O Melhor Amigo da...', url: 'https://www.youtube.com/embed/HI_GR8kKMuI', genre: 'Comédia' },
             { image: 'https://br.web.img2.acsta.net/medias/nmedia/18/87/32/17/19874294.jpg', name: 'A Ultima Música', url: 'https://www.youtube.com/embed/NT5xS26Fla8', genre: 'Romance' },
+            
+            { image: 'https://play-lh.googleusercontent.com/D5GX3VP0cOVceEd6K0XybB04UORBzw67y8JfQ175xyBttY85rmH-C1X5bbYTfSNTJsEOQsT0QE9wudWHzPFD=w240-h480-rw', name: 'Descendentes', url:'https://drive.google.com/file/d/16LKPF96wJlULW_6nDYSWsxXD7w_4XsLC/preview', genre: 'Aventura' },
+            { image: 'https://upload.wikimedia.org/wikipedia/pt/3/38/Descendants_2_P%C3%B4ster.jpeg', name: 'Descendentes 2', url:'https://drive.google.com/file/d/1YDcFoxZRcln41p8uluz3nO-jvrg7IqpO/preview', genre: 'Aventura' },
+            { image: 'https://upload.wikimedia.org/wikipedia/pt/8/8d/Descendants2.5.jpg', name: 'Descendentes 2.5: Aqui...', url:'https://drive.google.com/file/d/1YX8Yt5YoH1NR9WGFzn2tSk0ZuFoggdVR/preview', genre: 'Aventura' },
+            { image: 'https://play-lh.googleusercontent.com/j6ZVxffvob6_LGQoXpLb6GChLSKOWhN1iUFjjI_ROO9mGAVJuBkP1q05wIK6LuNn-uMF', name: 'Descendentes 3', url:'https://drive.google.com/file/d/1cN1kI5ZCDkvTA0mELWYHdbFhPz3jzwAv/preview', genre: 'Aventura' },
+
             { image: 'https://images.justwatch.com/poster/316624627/s718/descedentes-a-ascensao-de-copas.jpg', name: 'Descedentes: A Ascen...', url: 'https://www.youtube.com/embed/4mW2g725l3I', genre: 'Comédia' },
             { image: 'https://m.media-amazon.com/images/S/pv-target-images/43bedd3729685ea324304d157fe76364027579527a9ccea323fb3868f075c3bc.jpg', name: 'Remanescentes...', url: 'https://www.youtube.com/embed/06UDLSRHRTw', genre: 'Drama' },
             { image: 'https://upload.wikimedia.org/wikipedia/pt/f/fe/Olaf%27s_Frozen_Adventure_poster.jpg', name: 'Frozen: Olaf Em...', url: 'https://www.youtube.com/embed/b8mB3oJwuuc', genre: 'Animação' },
