--- a/index.html
+++ b/index.html
@@ -59,11 +59,14 @@
             background-color: #2563eb;
             color: white;
             padding: 10px 20px;
-            border-radius: 8px;
+            border-radius: 30px;
             text-decoration: none;
             font-size: 16px;
             font-weight: 600;
             transition: background-color 0.3s ease, color 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 8px;
         }
 
         .navbar .home-button:hover {
