--- a/index.html
+++ b/index.html
@@ -250,8 +250,7 @@
         <a href="#" onclick="filterByGenre('Drama')">Drama</a>
         <a href="#" onclick="filterByGenre('Terror')">Terror</a>
         <a href="#" onclick="filterByGenre('Romance')">Romance</a>
-        <!-- Botão Home ajustado -->
-        <a class="home-button" href="https://streamplus360.github.io/home/" target="_blank">Home 🏠</a>
+        <a class="home-button" href="https://streamplus360.github.io/home/">Home 🏠</a>
     </div>
 
     <img class="logo" src="https://i.ibb.co/61b7LQH/Stream-02-01-2025.png" alt="Gameflix Logo">
