--- a/index.html
+++ b/index.html
@@ -394,6 +394,8 @@
             { image: 'https://play-lh.googleusercontent.com/OjxT055m3do_GuqJkU_K--nuSdjW1G19DGoiqrQvXK74IqH8HOj3TfO-HbE8r8qfpG_UdovVYRGe-OsLlI3c', name: 'Legalmente Loira', url: 'https://drive.google.com/file/d/1BM34a98JbMRy-BkH3vMEoyhWJ7Nsvl2u/preview', genre: 'Comédia' },
             { image: 'https://images.justwatch.com/poster/239896252/s718/legalmente-loira-2.jpg', name: 'Legalmente Loira 2', url: 'https://www.youtube.com/embed/0YyY-tC4QFQ', genre: 'Comédia' },
             { image: 'https://images.justwatch.com/poster/242943249/s332/legally-blondes', name: 'Legalmente Loiras', url: 'https://drive.google.com/file/d/1_BRuRinmkcBXJbDasUur5plSNDJZ8pmf/preview', genre: 'Comédia' },
+            { image: 'https://i.ibb.co/nNyJXStv/Picture1.png', name: 'Homem Aranha: Atrá...', url: 'https://www.youtube.com/embed/Ih15Gaw7v3g', genre: 'Animação' },
+            { image: 'https://upload.wikimedia.org/wikipedia/pt/b/b5/Duplex-2003-fkfkfkfkfk.jpg', name: 'Duplex', url: 'https://www.youtube.com/embed/CcVRm_Dw6uQ', genre: 'Comédia' },
 
 ];
         const container = document.querySelector('.container');
